# slate

./: Cargo.toml  README.md  note.md
src/: control_plane.rs  daemon.rs  db.rs  http_server.rs  main.rs
