[package]
name = "slate"
version = "0.1.0"
edition = "2021"

[dependencies]
arboard = "3.4.1"
axum = "0.8.1"
clap = { version = "4.5.32", features = ["derive"] }
libc = "0.2.171"
reqwest = { version = "0.12.15", features = ["json"] }
rusqlite = { version = "0.34.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["io-util", "net", "rt", "sync"] }
ulid = "1.2.1"
zstd = "0.13.3"
