[package]
name = "slate"
version = "0.1.0"
edition = "2021"

[dependencies]
arboard = { version = "3.4.1", features = ["wayland-data-control", "wl-clipboard-rs"] }
axum = "0.8.1"
clap = { version = "4.5.32", features = ["derive"] }
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["client", "http1"] }
hyper-util = "0.1.11"
hyperlocal = "0.9.1"
libc = "0.2.171"
reqwest = { version = "0.12.15", features = ["json"] }
rusqlite = { version = "0.34.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["io-util", "net", "rt", "sync"] }
ulid = "1.2.1"
ureq = "3.0.11"
zstd = "0.13.3"
